--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <textarea name="message" cols="30" rows="10" placeholder="Digite a sua mensagem" required></textarea>
             <button type="submit">Enviar Messagem</button>
 
-            <input type="hidden" name="accessKey" value="8f164f18-4c5b-41c7-8f84-740d51b4c51b">
-            <input type="hidden" name="redirectTo" value="https://qstdigital.github.io/art/obrigado.html">
+            <input type="hidden" name="accessKey" value="30ea4ab0-0009-4bba-8679-aa1063cbb09c">
+            <input type="hidden" name="redirectTo" value="https://valenciafer.github.io/meu-site/obrigado.html">
         </form>
     </section>
 </body>
